force-app/src/objects/Framework__Translation__c.object
<CustomObject>
    <fields>
        <fullName>Framework__Field__c</fullName>
        <description>API Name of the field</description>
        <inlineHelpText>API Name of the field</inlineHelpText>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Framework__Language_Code__c</fullName>
        <description>The language of the translation</description>
        <inlineHelpText>The language of the translation</inlineHelpText>
        <label>Language Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Framework__ObjectId__c</fullName>
        <description>The Id of the object targeted by this translation</description>
        <inlineHelpText>The Id of the object targeted by this translation</inlineHelpText>
        <label>ObjectId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Framework__Translation__c</fullName>
        <description>The translated value will display in the community portal</description>
        <inlineHelpText>The translated value will display in the community portal</inlineHelpText>
        <label>Translation</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <label>Translation</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Translation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>